# astrotui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.claude/commands/: advance.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  mermaid.yml
apps/orchestrator/: Cargo.toml
apps/orchestrator/examples/: record_demo.rs
apps/orchestrator/scenes/: orbit.json
apps/orchestrator/src/: main.rs
apps/orchestrator/tests/: replay_asset.rs
crates/astrotui-core/: Cargo.toml
crates/astrotui-core/src/: geom.rs  lib.rs  producer.rs  render.rs  scene.rs  testing.rs
crates/astrotui-core/src/snapshots/: astrotui_core__snapshot_harness__buffer_dump_snapshots.snap
crates/astrotui-dem/: Cargo.toml
crates/astrotui-dem/src/: lib.rs
crates/astrotui-render-braille/: Cargo.toml
crates/astrotui-render-braille/src/: lib.rs
crates/astrotui-render-braille/src/snapshots/: astrotui_render_braille__tests__oblate_ellipse_silhouette_golden.snap
crates/astrotui-render-color/: Cargo.toml
crates/astrotui-render-color/src/: lib.rs
crates/astrotui-render-color/src/snapshots/: astrotui_render_color__tests__shaded_ellipse_golden.snap
crates/astrotui-render-graphics/: Cargo.toml
crates/astrotui-render-graphics/src/: lib.rs
crates/astrotui-wire/: Cargo.toml
crates/astrotui-wire/src/: codec.rs  frame_doc.rs  lib.rs  replay.rs  scene_doc.rs
docs/: DEM.md  DESIGN.md
tools/mermaid-lint/: .gitignore  README.md  lint.mjs  package-lock.json  package.json
