[workspace]
resolver = "2"
members = [
    "crates/astrotui-core",
    "crates/astrotui-render-braille",
    "crates/astrotui-render-color",
    "crates/astrotui-render-graphics",
    "crates/astrotui-wire",
    "crates/astrotui-dem",
    "apps/orchestrator",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
repository = "https://github.com/simnaut/astrotui"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Internal crates (path-wired; the §9 dependency graph).
astrotui-core = { path = "crates/astrotui-core" }
astrotui-render-braille = { path = "crates/astrotui-render-braille" }
astrotui-render-color = { path = "crates/astrotui-render-color" }
astrotui-render-graphics = { path = "crates/astrotui-render-graphics" }
astrotui-wire = { path = "crates/astrotui-wire" }
astrotui-dem = { path = "crates/astrotui-dem" }

# astrodyn substrate — pinned by git rev for reproducibility (#8). The pure,
# Bevy-free, ANISE-free crates. astrodyn_ephemeris is intentionally NOT pinned here:
# it enters only through producers, never the render core (DESIGN.md §12 firewall).
# Pinned to a post-#659 rev: FrameUid identity + astrodyn_frame_doc (DESIGN §3, §4.3).
astrodyn_frames = { git = "https://github.com/simnaut/astrodyn", rev = "045804f9fa895fba6682c6c424ef949fbadf305b" }
astrodyn_quantities = { git = "https://github.com/simnaut/astrodyn", rev = "045804f9fa895fba6682c6c424ef949fbadf305b" }
astrodyn_planet = { git = "https://github.com/simnaut/astrodyn", rev = "045804f9fa895fba6682c6c424ef949fbadf305b" }
# Frame-document wire schema (astrodyn #659) — consumed by astrotui-wire (#75).
astrodyn_frame_doc = { git = "https://github.com/simnaut/astrodyn", rev = "045804f9fa895fba6682c6c424ef949fbadf305b" }

# ratatui — shared across core + the render backends so the Buffer type in the
# Renderer trait is the same everywhere.
ratatui = "0.30"
