[package]
name = "astrotui-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Source-agnostic rendering core for astrotui: widget, Camera, SceneStore/SceneWriter, Renderer trait, projection/LOD. Links no Bevy and no ANISE/ephemeris."

[dependencies]
ratatui = "0.30.0"
astrodyn_frames = { workspace = true }
astrodyn_quantities = { workspace = true }
astrodyn_planet = { workspace = true }

[lints]
workspace = true
