[package]
name = "astrotui-render-braille"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Monochrome braille-dot rendering backend for astrotui (the capability floor)."

[dependencies]
astrotui-core = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
# Golden-frame silhouette tests: `buffer_to_text` (core's `testing` feature) + insta snapshots.
astrotui-core = { workspace = true, features = ["testing"] }
insta = "1"

[lints]
workspace = true
