[package]
name = "astrotui-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Scene wire adapter for astrotui: consumes astrodyn_frame_doc (snapshot + replay) into the core SceneStore."

[dependencies]
# The frame wire is astrodyn's `astrodyn_frame_doc` schema (astrodyn #659); this crate
# adapts it into the core SceneStore. wire -> core is acyclic (core never depends on wire).
astrotui-core = { workspace = true }
astrodyn_frame_doc = { workspace = true }
astrodyn_quantities = { workspace = true }
glam = "0.30"          # DVec3/DQuat to build core BodyState (must match core's glam)

[lints]
workspace = true
