[package]
name = "astrotui-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Scene wire adapter for astrotui: consumes astrodyn_frame_doc (snapshot + replay) into the core SceneStore."

[dependencies]
# The frame wire is astrodyn's `astrodyn_frame_doc` schema (astrodyn #659); this crate
# adapts it into the core SceneStore. wire -> core is acyclic (core never depends on wire).
astrotui-core = { workspace = true }
astrodyn_frame_doc = { workspace = true }
# `serde` feature: this crate embeds `FrameUid` in its own object records (#21), so it needs
# FrameUid's serde derives (gated in astrodyn_quantities). Don't rely on feature unification.
astrodyn_quantities = { workspace = true, features = ["serde"] }
astrodyn_planet = { workspace = true }   # PlanetShape::new, to reconstruct object shapes (#21)
glam = "0.30"          # DVec3/DQuat to build core BodyState (must match core's glam)
serde = { workspace = true }             # derive Serialize/Deserialize on the wire records
serde_json = { workspace = true }        # the JSON `WireCodec` (binary/postcard is P3)

[dev-dependencies]
# Test-only: the rotating-frame integration test (#77) drives core's `project_points`,
# whose viewport argument is a ratatui `Rect`. Not a runtime dep — wire produces no UI.
ratatui = { workspace = true }

[lints]
workspace = true
